--- a/views/token.hbs
+++ b/views/token.hbs
@@ -1,2 +1,2 @@
 <h2>Success! Copy this command and run it in your terminal.</h2>
-<h4>better-vsts-npm-auth config refreshToken {{refreshToken}} </h4>
+<p>better-vsts-npm-auth config refresh_token {{refreshToken}}</p>
