--- a/views/token.hbs
+++ b/views/token.hbs
@@ -1,2 +1,3 @@
 <h2>Success! Copy this command and run it in your terminal.</h2>
-<p>better-vsts-npm-auth config set refresh_token {{refreshToken}}</p>
+<p><br>better-vsts-npm-auth config set refresh_token {{refreshToken}}</p>
+<p><br>Did that help? Consider funding the caffeine habit that produces this software: <a href="https://www.buymeacoffee.com/danzumwalt">buy me a coffee</a></p>
